criado esboco de arbitro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,13 @@
       </nav>
 </header>
 
-<app-arbitro></app-arbitro>
+<div class="container">
+    <app-arbitro></app-arbitro>
+</div>
+
+
+<footer>
+    <p class="p-3 mb-2 bg-success text-white">
+        Súmula Eletrônica para Jogos Amadores - Desenvolvido por: Esp. Fábio Almeida - Senai 2019
+    </p>
+</footer>
