--- a/src/app/arbitro/arbitro.component.html
+++ b/src/app/arbitro/arbitro.component.html
@@ -1,42 +1,8 @@
-<section class="campo_procura">
-    <div class="form-group row">
-        <label for="SearcNomeArbitro" class="col-sm-2 col-form-label">Nome:</label>
-        <div class="col-sm-10">
-        <input type="text" class="form-control" id="SearcNomeArbitro" placeholder="Nome">
-        </div>
-    </div>
-
-    Função:
-
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="searchTipoArbitros" id="searchTipoArbitrosOp1" value="option1" checked>
-        <label class="form-check-label" for="searchTipoArbitrosOp1">
-            Árbitro
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="searchTipoArbitros" id="searchTipoArbitrosOp2" value="option2">
-        <label class="form-check-label" for="searchTipoArbitrosOp2">
-            Assistente
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="searchTipoArbitros" id="searchTipoArbitrosOp3" value="option3">
-        <label class="form-check-label" for="searchTipoArbitrosOp3">
-            Todos
-        </label>
-    </div>
-    <div>
-        <br>
-        <button type="button" class="btn btn-primary">Buscar</button>
-        <button type="button" class="btn btn-success">Novo Árbitro</button>
-    </div>
-                
-</section>
+<a class="btn btn-success" routerLink="/arbitro-cadastro">Novo</a>
 
 <section class="campo_tabela">
     <p class="texto_titulo_tabela">
-        Árbitros encontrados:
+        Árbitros cadastrados:
     </p>
     <table class="table">
         <thead>
@@ -92,80 +58,5 @@
             </tr>
         </tbody>
     </table>
-    <div>
-        <br>
-        <button type="button" class="btn btn-primary">Abrir Registro</button>
-    </div>
 </section>
 
-<section class="campo_cadastro">
-    <form>
-        <p class="texto_titulo_cadastro">
-            Cadastro de Árbitro
-        </p>
-        <div class="form-group">
-            Código: #1                
-        </div>
-        
-        <div class="form-row">
-            <div class="form-group col-md-6">
-                <label for="arbitroCpf">CPF:</label>
-                <input type="number" class="form-control" id="arbitroCpf" placeholder="CPF" required>
-            </div>
-            <div class="form-group col-md-6">
-                <label for="arbitroSenha">Senha:</label>
-                <input type="password" class="form-control" id="arbitroSenha" placeholder="Senha" required>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="arbitroNome">Nome:</label>
-            <input type="text" class="form-control" id="arbitroNome" placeholder="Nome Completo" required>
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="arbitroDataNasc">Data Nascimento:</label>
-                <input type="date" class="form-control" id="arbitroDataNasc" placeholder="Data Nascimento" required>
-            </div>
-            <div class="form-group col-md-4">
-                <label for="arbitroAltura">Altura(cm):</label>
-                <input type="number" class="form-control" id="arbitroAltura" placeholder="Altura" required>
-            </div>
-
-            <div class="form-group col-md-4">
-                <label for="arbitroPeso">Peso:</label>
-                <input type="number" step="0.1" class="form-control" id="arbitroPeso" placeholder="Peso" required>
-            </div>
-        </div>
-
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="arbitroSexo">Sexo:</label>
-                <select id="arbitroSexo" class="form-control">
-                    <option selected>Masculino</option>
-                    <option>Feminino</option>
-                </select>
-            </div>
-
-            <div class="form-group col-md-4">
-                <label for="arbitroSexo">Categoria:</label>
-                <select id="arbitroSexo" class="form-control">
-                    <option selected>LIGA</option>
-                    <option>FCF</option>
-                    <option>CBF</option>
-                    <option>FIFA</option>
-                </select>
-            </div>
-
-            <div class="form-group col-md-4">
-                <label for="arbitroSexo">Função:</label>
-                <select id="arbitroSexo" class="form-control">
-                    <option selected>Árbitro</option>
-                    <option>Assistente</option>
-                </select>
-            </div>
-        </div>
-        <button class="btn btn-success" type="submit">Salvar</button>              
-    </form>           
-</section>
