--- a/src/app/arbitro/arbitro.component.html
+++ b/src/app/arbitro/arbitro.component.html
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <th scope="col">Nome</th>
-                <th scope="col">Assistente</th>
+                <th scope="col">Função</th>
                 <th scope="col">Categoria</th>
             </tr>
         </thead>
@@ -19,7 +19,7 @@
                         {{arbitro.nome}}
                     </a>
                 </td>
-                <td>{{arbitro.assistente}}</td>
+                <td>{{arbitro.funcao}}</td>
                 <td>{{arbitro.categoria}}</td>
             </tr>
         </tbody>
