--- a/src/app/arbitro/arbitro.component.html
+++ b/src/app/arbitro/arbitro.component.html
@@ -1,6 +1,7 @@
-<a class="btn btn-success" routerLink="/arbitro-cadastro">Novo</a>
-
 <section class="campo_tabela">
+    <p>
+        <a class="btn btn-success" routerLink="/arbitro-cadastro">Novo Árbitro</a>
+    </p>
     <p class="texto_titulo_tabela">
         Árbitros cadastrados:
     </p>
