--- a/src/app/arbitro-cadastro/arbitro-cadastro.component.html
+++ b/src/app/arbitro-cadastro/arbitro-cadastro.component.html
@@ -33,7 +33,7 @@
             </div>
     
             <div class="form-group col-md-6">
-                <input type="text" class="form-control" name="cpf" id="cpf" placeholder="CPF" 
+                <input type="number" number class="form-control" name="cpf" id="cpf" placeholder="CPF" 
                 required #cpf="ngModel" [(ngModel)]="arbitro.cpf">
             </div>
 
