tentativa de criacao do cep service

--- a/src/app/clube/clube.component.html
+++ b/src/app/clube/clube.component.html
@@ -21,7 +21,7 @@
                     </a>
                 </td>
                 <td>{{clube.estadio}}</td>
-                <td>{{clube.cidade}}/{{clube.estado}}</td>
+                <td>{{clube.cidade}}</td>
             </tr>
         </tbody>
     </table>
