--- a/src/app/clube-cadastro/clube-cadastro.component.html
+++ b/src/app/clube-cadastro/clube-cadastro.component.html
@@ -38,50 +38,28 @@
             </div>
 
             <div class="form-group col-md-6">
-                <label for="cidade" class="control-label">Cidade</label>
+                <label for="cep" class="control-label">CEP</label>
             </div>
     
             <div class="form-group col-md-6">
-                <input type="text" class="form-control" name="cidade" id="cidade" 
-                placeholder="Cidade" 
-                required #cidade="ngModel" [(ngModel)]="clube.cidade">
+                <input type="number" number class="form-control" name="cep" id="cep" 
+                placeholder="CEP" 
+                required #cep="ngModel" [(ngModel)]="clube.cep">
             </div>
         </div>
 
-        <div class="form-group col-md-6">
+        <div class="form-group">
             <div class="form-group col-md-6">
-                <label for="estado">Estado</label>
-                <select id="estado" class="form-control" id="estado" name="estado"
-                #estado="ngModel" [(ngModel)]="clube.estado">
-                    <option value="AC">AC</option>
-                    <option value="AP">AP</option>
-                    <option value="AM">AM</option>
-                    <option value="BA">BA</option>
-                    <option value="CE">CE</option>
-                    <option value="DF">DF</option>
-                    <option value="ES">ES</option>
-                    <option value="GO">GO</option>
-                    <option value="MA">MA</option>
-                    <option value="MT">MT</option>
-                    <option value="MS">MS</option>
-                    <option value="MG">MG</option>
-                    <option value="PA">PA</option>
-                    <option value="PB">PB</option>
-                    <option value="PR">PR</option>
-                    <option value="PE">PE</option>
-                    <option value="PI">PI</option>
-                    <option value="RJ">RJ</option>
-                    <option value="RN">RN</option>
-                    <option value="RS">RS</option>
-                    <option value="RO">RO</option>
-                    <option value="RR">RR</option>
-                    <option value="SC">SC</option>
-                    <option value="SP">SP</option>
-                    <option value="SE">SE</option>
-                    <option value="TO">TO</option>
-                </select>
+                <label class="control-label">Rua: </label>
+            </div>
+
+            <div class="form-group col-md-6">
+                <label class="control-label">Cidade: {{clube.cidade}}</label>
             </div>
         </div>
+
+        
+        
         
         <p>
             <button class="btn btn-success" [disabled]="!formulario.valid" type="submit">Salvar</button> 
