--- a/src/app/atleta/atleta.component.html
+++ b/src/app/atleta/atleta.component.html
@@ -11,6 +11,7 @@
                 <th scope="col">Nome</th>
                 <th scope="col">CPF</th>
                 <th scope="col">BID</th>
+                <th scope="col">Clube</th>
             </tr>
         </thead>
         <tbody>
@@ -22,6 +23,7 @@
                 </td>
                 <td>{{atleta.cpf}}</td>
                 <td>{{atleta.bid}}</td>
+                <td>{{atleta.clube}}</td>
             </tr>
         </tbody>
     </table>
