inserido textarea e select

--- a/src/app/sumula-cadastro/sumula-cadastro.component.html
+++ b/src/app/sumula-cadastro/sumula-cadastro.component.html
@@ -6,41 +6,44 @@
         
         <div class="form-group">
             <div class="form-group col-md-12">
-                <label class="control-label">Resultado Final</label>
-                <p>{{sumula.placarMandante}} x {{sumula.placarVisitante}}</p>
+                <h3>
+                    <label class="control-label">Resultado Final</label>
+                    {{sumula.placarMandante}} x {{sumula.placarVisitante}}
+                </h3>
             </div>
 
-            <div class="form-group col-md-6">
-                <label for="mandante">Clube Mandante</label>
-                <select id="mandante" class="form-control" id="mandante" name="mandante"
-                #mandante="ngModel" [(ngModel)]="sumula.mandante"
-                (change)="onItemChange(mandante)">
-                    <option value="Sem Clube">Selecionar</option>
-                    <option *ngFor="let clube of clubes" [value]="clube.nome">{{clube.nome}}</option>
-                </select>
+            <div class="form-group row">
+                <div class="col-sm-5">
+                    <label for="mandante">Clube Mandante</label>
+                    <select id="mandante" class="form-control" id="mandante" name="mandante"
+                    #mandante="ngModel" [(ngModel)]="sumula.mandante"
+                    (change)="onItemChange(mandante)">
+                        <option value="Sem Clube">Selecionar</option>
+                        <option *ngFor="let clube of clubes" [value]="clube.nome">{{clube.nome}}</option>
+                    </select>
+                </div>
+
+                <div class="col-sm-5">
+                    <label for="visitante">Clube Visitante</label>
+                    <select id="visitante" class="form-control" id="visitante" name="visitante"
+                    #visitante="ngModel" [(ngModel)]="sumula.visitante">
+                        <option value="Sem Clube">Selecionar</option>
+                        <option *ngFor="let clube of clubes" [value]="clube.nome">{{clube.nome}}</option>
+                    </select>
+                </div>
             </div>
 
-            <div class="form-group col-md-6">
-                <label for="visitante">Clube Visitante</label>
-                <select id="visitante" class="form-control" id="visitante" name="visitante"
-                #visitante="ngModel" [(ngModel)]="sumula.visitante">
-                    <option value="Sem Clube">Selecionar</option>
-                    <option *ngFor="let clube of clubes" [value]="clube.nome">{{clube.nome}}</option>
-                </select>
-            </div>
+            <div class="form-group row">      
+                <div class="col-sm-3">
+                    <label for="data" class="control-label">Data e Hora da Partida</label>
+                    <input type="datetime-local" datetime-local class="form-control" name="data" 
+                    id="data" required #data="ngModel" [(ngModel)]="sumula.data">
+                </div>
 
-            <div class="form-group col-md-12">
-                <label class="control-label">Local</label>
-                <p>{{sumula.estadio}} - {{sumula.cidade}}</p>
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="data" class="control-label">Data e Hora da Partida</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="data" 
-                id="data" required #data="ngModel" [(ngModel)]="sumula.data">
+                <div class="col-sm-6">
+                    <label class="control-label">Local da Partida</label>
+                    <p>{{sumula.estadio}} - {{sumula.cidade}}</p>
+                </div>
             </div>
         </div>
 
@@ -49,75 +52,58 @@
         </p>
 
         <div class="form-group">
-            <div class="form-group col-md-6">
-                <label for="entradaMandante" class="control-label">Entrada Mandante</label>
+            <div class="form-group row">           
+                <div class="col-sm-3">
+                    <label for="entradaMandante" class="control-label">Entrada Mandante</label>
+                    <input type="time" time class="form-control" name="entradaMandante" 
+                    id="entradaMandante" required #entradaMandante="ngModel" [(ngModel)]="sumula.entradaMandante">
+                </div>
+        
+                <div class="col-sm-3">
+                    <label for="entradaVisitante" class="control-label">Entrada Visitante</label>
+                    <input type="time" time class="form-control" name="entradaVisitante" 
+                    id="entradaVisitante" required #entradaVisitante="ngModel" [(ngModel)]="sumula.entradaVisitante">
+                </div>
+        
+                <div class="col-sm-3">
+                    <label for="inicioPrimeiroTempo" class="control-label">Início do Jogo</label>
+                    <input type="time" time class="form-control" name="inicioPrimeiroTempo" 
+                    id="inicioPrimeiroTempo" required #inicioPrimeiroTempo="ngModel" [(ngModel)]="sumula.inicioPrimeiroTempo">
+                </div>
+
+                <div class="col-sm-3">
+                    <label for="fimPrimeiroTempo" class="control-label">Fim do Primeiro Tempo</label>
+                    <input type="time" time class="form-control" name="fimPrimeiroTempo" 
+                    id="fimPrimeiroTempo" required #fimPrimeiroTempo="ngModel" [(ngModel)]="sumula.fimPrimeiroTempo">
+                </div>
+
             </div>
     
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="entradaMandante" 
-                id="entradaMandante" required #entradaMandante="ngModel" [(ngModel)]="sumula.entradaMandante">
-            </div>
+            
+            <div class="form-group row">        
+                <div class="col-sm-3">
+                    <label for="retornoMandante" class="control-label">Retorno Mandante</label>
+                    <input type="time" time class="form-control" name="retornoMandante" 
+                    id="retornoMandante" required #retornoMandante="ngModel" [(ngModel)]="sumula.retornoMandante">
+                </div>
+        
+                <div class="col-sm-3">
+                    <label for="retornoVisitante" class="control-label">Retorno Visitante</label>
+                    <input type="time" time class="form-control" name="retornoVisitante" 
+                    id="retornoVisitante" required #retornoVisitante="ngModel" [(ngModel)]="sumula.retornoVisitante">
+                </div>
 
-            <div class="form-group col-md-6">
-                <label for="entradaVisitante" class="control-label">Entrada Visitante</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="entradaVisitante" 
-                id="entradaVisitante" required #entradaVisitante="ngModel" [(ngModel)]="sumula.entradaVisitante">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="inicioPrimeiroTempo" class="control-label">Início do Jogo</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="inicioPrimeiroTempo" 
-                id="inicioPrimeiroTempo" required #inicioPrimeiroTempo="ngModel" [(ngModel)]="sumula.inicioPrimeiroTempo">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="fimPrimeiroTempo" class="control-label">Fim do Primeiro Tempo</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="fimPrimeiroTempo" 
-                id="fimPrimeiroTempo" required #fimPrimeiroTempo="ngModel" [(ngModel)]="sumula.fimPrimeiroTempo">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="retornoMandante" class="control-label">Retorno Mandante</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="retornoMandante" 
-                id="retornoMandante" required #retornoMandante="ngModel" [(ngModel)]="sumula.retornoMandante">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="retornoVisitante" class="control-label">Retorno Visitante</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="retornoVisitante" 
-                id="retornoVisitante" required #retornoVisitante="ngModel" [(ngModel)]="sumula.retornoVisitante">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="inicioSegundoTempo" class="control-label">Início do Segundo Tempo</label>
-            </div>
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="inicioSegundoTempo" 
-                id="inicioSegundoTempo" required #inicioSegundoTempo="ngModel" [(ngModel)]="sumula.inicioSegundoTempo">
-            </div>
-
-            <div class="form-group col-md-6">
-                <label for="fimSegundoTempo" class="control-label">Fim do Jogo</label>
-            </div>
-    
-            <div class="form-group col-md-6">
-                <input type="date" date class="form-control" name="fimSegundoTempo" 
-                id="fimSegundoTempo" required #fimSegundoTempo="ngModel" [(ngModel)]="sumula.fimSegundoTempo">
+                <div class="col-sm-3">
+                    <label for="inicioSegundoTempo" class="control-label">Início do Segundo Tempo</label>
+                    <input type="time" time class="form-control" name="inicioSegundoTempo" 
+                    id="inicioSegundoTempo" required #inicioSegundoTempo="ngModel" [(ngModel)]="sumula.inicioSegundoTempo">
+                </div>
+        
+                <div class="col-sm-3">
+                    <label for="fimSegundoTempo" class="control-label">Fim do Jogo</label>
+                    <input type="time" time class="form-control" name="fimSegundoTempo" 
+                    id="fimSegundoTempo" required #fimSegundoTempo="ngModel" [(ngModel)]="sumula.fimSegundoTempo">
+                </div>
             </div>
         </div>
 
@@ -126,27 +112,30 @@
         </p>    
         
         <div class="form-group">
-            <div class="form-group col-md-12">
-                <label class="control-label">Árbitro</label>
-                <p>Aqui deve trazer o arbitro logado</p>
+            <div class="form-group row">
+                <div class="col-sm-12">
+                    <label class="control-label">Árbitro</label>
+                    <p>{{sumula.arbitro}}</p>
+                </div>
             </div>
+            <div class="form-group row">  
+                <div class="col-sm-6">
+                    <label for="assistente1">Assistente 1</label>
+                    <select id="assistente1" class="form-control" id="assistente1" name="assistente1"
+                    #assistente1="ngModel" [(ngModel)]="sumula.assistente1">
+                        <option value="Selecionar">Selecionar</option>
+                        <option *ngFor="let arbitro of arbitros" [value]="arbitro.nome">{{arbitro.nome}}</option>
+                    </select>
+                </div>
 
-            <div class="form-group col-md-12">
-                <label for="assistente1" class="control-label">Assistente 1</label>
-            </div>
-    
-            <div class="form-group col-md-12">
-                <input type="text" class="form-control" name="assistente1" id="assistente1" placeholder="assistente1" 
-                required #assistente1="ngModel" [(ngModel)]="sumula.assistente1">
-            </div>
-
-            <div class="form-group col-md-12">
-                <label for="assistente2" class="control-label">Assistente 2</label>
-            </div>
-    
-            <div class="form-group col-md-12">
-                <input type="text" class="form-control" name="assistente2" id="assistente2" placeholder="assistente2" 
-                required #assistente2="ngModel" [(ngModel)]="sumula.assistente2">
+                <div class="col-sm-6">
+                    <label for="assistente2">Assistente 2</label>
+                    <select id="assistente2" class="form-control" id="assistente2" name="assistente2"
+                    #assistente2="ngModel" [(ngModel)]="sumula.assistente2">
+                        <option value="Selecionar">Selecionar</option>
+                        <option *ngFor="let arbitro of arbitros" [value]="arbitro.nome">{{arbitro.nome}}</option>
+                    </select>
+                </div>
             </div>
         </div>
 
@@ -162,8 +151,10 @@
             </div>
     
             <div class="form-group col-md-12">
-                <input type="text" class="form-control" name="relatorioExpulsoes" id="relatorioExpulsoes" placeholder="relatorioExpulsoes" 
-                required #relatorioExpulsoes="ngModel" [(ngModel)]="sumula.relatorioExpulsoes">
+                <textarea name="relatorioExpulsoes" id="relatorioExpulsoes" class="form-control" aria-label="With textarea" 
+                placeholder="Relatório de Expulsões" required 
+                #relatorioExpulsoes="ngModel" [(ngModel)]="sumula.relatorioExpulsoes">
+                </textarea>
             </div>
 
             <div class="form-group col-md-12">
@@ -171,8 +162,10 @@
             </div>
     
             <div class="form-group col-md-12">
-                <input type="text" class="form-control" name="relatorioObservacoes" id="relatorioObservacoes" placeholder="relatorioExpulsoes" 
-                required #relatorioObservacoes="ngModel" [(ngModel)]="sumula.relatorioObservacoes">
+                <textarea name="relatorioObservacoes" id="relatorioObservacoes" class="form-control" aria-label="With textarea" 
+                placeholder="Relatório de Obervações Gerais" required 
+                #relatorioObservacoes="ngModel" [(ngModel)]="sumula.relatorioObservacoes">
+                </textarea>
             </div>
         </div>
         
@@ -180,7 +173,7 @@
             <button class="btn btn-success" [disabled]="!formulario.valid" type="submit">Salvar</button> 
         </p>
         <p>
-            <a class="btn btn-danger" routerLink="/atleta">Cancelar</a>
+            <a class="btn btn-danger" routerLink="/sumula">Cancelar</a>
         </p>
         
     </form>           
