--- a/src/styles.css
+++ b/src/styles.css
@@ -72,8 +72,22 @@
     margin: auto;
     margin-top: 20px;
     width: 90%;
-    border: 4px solid lightgray;
+    border: 4px solid green;
     border-radius: 20px;
+}
+
+.subcampo_cadastro
+{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100%;
+    border: 2px solid green;
+    border-radius: 15px;
 }
 
 .titulos_sumula
